Sun, Dec 3, 2023, 2:05 PM -05:00

--- a/templates/harvard.html
+++ b/templates/harvard.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en" class="margin">
     <head>
-    <meta name="viewport" content="initial-scale=1, width=device-width">
-    <link href="/static/styles.css" rel="stylesheet">
+        <title>Final Guess</title>
     </head>
-    <body>
-        <p>guess page</p>
+    <body class="body">
+        <h1 class="header">Final Guess</h1>
+        <div class="text">
+            It was
+            <div class="mb-3">
+                <select class="form-select mx-auto w-auto" name="person">
+                    <option disabled="" selected="">Person</option>
+                    <option value="{{ cards['person'] }}">{{ cards['person'] }}</option>
+                </select>
+            </div> <br>
+            with the
+            <div class="mb-3">
+                <select class="form-select mx-auto w-auto" name="weapon">
+                    <option disabled="" selected="">Weapon</option>
+                    <option value="{{ cards['weapon'] }}">{{ cards['weapon'] }}</option>
+                </select>
+            </div> <br>
+            in
+            <div class="mb-3">
+                <select class="form-select mx-auto w-auto" name="place">
+                    <option disabled="" selected="">Place</option>
+                    <option value="{{ cards['place'] }}">{{ cards['place'] }}</option>
+                </select>
+            </div> <br>
+        </div>
     </body>
 </html>
-
