--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -1,10 +1,15 @@
-<
+<!DOCTYPE html>
 
-<div class="card">
-    <h2><b>Person</b></h2>
-  <img src="dean.jpeg" alt="Dean_Khurana" style="width:100%">
-  <div class="container">
-    <h4><b>Dean Khurana</b></h4>
-  </div>
-</div>
+<html lang="en">
+    <head>
+    </head>
+    <body>
+        <div class="card">
+            <h2><b>Person</b></h2>
+          <img src="pres_gay.jpeg" alt="President Gay" style="width:100%">
+          <div class="container">
+            <h4><b>President Gay</b></h4>
+          </div>
+        </div>
+    </body>
 
