--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -4,13 +4,15 @@
     <head>
     </head>
     <body>
-        <div class="card">
-            <h2><b>Person</b></h2>
-          <img src="pres_gay.jpeg" alt="President Gay" style="width:100%">
-          <div class="container">
-            <h4><b>President Gay</b></h4>
-          </div>
-        </div>
+        <form action="/buy" method="post">
+            <div class="card">
+                <h2><b>Person</b></h2>
+            <img src="pres_gay.jpeg" alt="President Gay" style="width:100%">
+            <div class="container">
+                <h4><b>President Gay</b></h4>
+            </div>
+            </div>
+        </form>
     </body>
 </html>
 
