Sun, Dec 3, 2023, 2:37 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -4,7 +4,7 @@
     <head>
     </head>
     <body>
-        <form action="/buy" method="post">
+        <form action="/all_cards" method="post">
             <div class="card">
                 <h2><b>Person</b></h2>
             <img src="pres_gay.jpeg" alt="President Gay" style="width:100%">
