--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-
+<form action="/game_board" method="post">
 <h1>
     <div class="header">
         CS50 CLUE
@@ -182,7 +182,7 @@
 <h3 class="header">BACK TO MY CARDS <br>
     <button><a href="mycards.html">MY CARDS</a></button>
 </h3>
-
+</form>
 </body>
 </html>
 
