--- a/templates/guess.html
+++ b/templates/guess.html
@@ -5,7 +5,9 @@
     <link href="/static/styles.css" rel="stylesheet">
     </head>
     <body>
-        <p>guess page</p>
+        <form action="/guess" method="post">
+            <p>guess page</p>
+        </form>
     </body>
 </html>
 
