--- a/templates/harvard.html
+++ b/templates/harvard.html
@@ -5,6 +5,7 @@
         <title>Final Guess</title>
     </head>
     <body class="body">
+        <form action="/start" method="post">
         <h1 class="header">Final Guess</h1>
         <div class="text">
             It was
