--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -5,6 +5,7 @@
         <title>My Cards</title>
     </head>
     <body class="body">
+        <form action="/mycards" method="post">
         <div class="text">
             Now that you know your own cards, click below to see all of the available options or go to the gameboard.
         </div>
