Sun, Dec 3, 2023, 2:42 PM -05:00

--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -5,7 +5,7 @@
         <title>My Cards</title>
     </head>
     <body class="body">
-        <form action="/mycards" method="post">
+        <form action="/my_cards" method="post">
         <div class="text">
             Now that you know your own cards, click below to see all of the available options or go to the gameboard.
         </div>
