Sun, Dec 3, 2023, 2:44 PM -05:00

--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -15,5 +15,6 @@
         <button><a href="places.html">Places</a></button>
         <h1 class="header1">The Game Board</h1>
         <button><a href="gameboard.html">Game Board</a></button>
+        </form>
     </body>
 </html>
