Sun, Dec 3, 2023, 2:51 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+        <link href="/static/styles.css" rel="stylesheet">
     </head>
     <body>
         <form action="/all_cards" method="post">
