--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="/static/styles.css" rel="stylesheet">
 </head>
 <body>
 <form action="/game_board" method="post">
