--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -3,6 +3,7 @@
 <html lang="en" class="margin">
     <head>
         <title>My Cards</title>
+        <link href="/static/styles.css" rel="stylesheet">
     </head>
     <body class="body">
         <form action="/my_cards" method="post">
@@ -10,9 +11,7 @@
             Now that you know your own cards, click below to see all of the available options or go to the gameboard.
         </div>
         <h1 class="header1">The Card Options</h1>
-        <button><a href="weapons.html">Weapons</a></button>
-        <button><a href="people.html">People</a></button>
-        <button><a href="places.html">Places</a></button>
+        <button><a href="allcards.html">All Cards</a></button>
         <h1 class="header1">The Game Board</h1>
         <button><a href="gameboard.html">Game Board</a></button>
         </form>
