Sun, Dec 3, 2023, 2:56 PM -05:00

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,7 +14,7 @@
                 Welcome to CS50 Clue! The CS50 duck has been tragically murdered and you are tasked with discovering the contents of the murder. The rules follow that of regular clue, with Harvard Hall in the center being the place you go to submit your final answers. Best of Luck.
             </div>
             <h1 class="header1">CS50 Clue</h1>
-            <button><a href="mycards.html">Click to Begin</a></button>
+            <button><a href="/my_cards">Click to Begin</a></button>
         </form>
     </body>
 </html>
