--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -11,9 +11,9 @@
                 Now that you know your own cards, click below to see all of the available options or go to the gameboard.
             </div>
             <h1 class="header1">The Card Options</h1>
-            <button><a href="allcards.html">All Cards</a></button>
+            <button><a href="/all_cards">All Cards</a></button>
             <h1 class="header1">The Game Board</h1>
-            <button><a href="gameboard.html">Game Board</a></button>
+            <button><a href="/game_board">Game Board</a></button>
         </form>
     </body>
 </html>
