Sun, Dec 3, 2023, 2:59 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -8,9 +8,9 @@
         <form action="/all_cards" method="post">
             <div class="card">
                 <h2><b>Person</b></h2>
-            <img src="pres_gay.jpeg" alt="President Gay" style="width:100%">
+            <img src="rope.png" alt="rope" style="width:100%">
             <div class="container">
-                <h4><b>President Gay</b></h4>
+                <h4><b>rope</b></h4>
             </div>
             </div>
         </form>
