Sun, Dec 3, 2023, 3:01 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -2,15 +2,15 @@
 
 <html lang="en">
     <head>
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="/static" rel="stylesheet">
     </head>
     <body>
         <form action="/all_cards" method="post">
             <div class="card">
-                <h2><b>Person</b></h2>
+                <h2>Weapon</h2>
             <img src="rope.png" alt="rope" style="width:100%">
             <div class="container">
-                <h4><b>rope</b></h4>
+                <h4>Rope</h4>
             </div>
             </div>
         </form>
