--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <link href="/static" rel="stylesheet">
+        <link href="/static/style.css" rel="stylesheet">
     </head>
     <body>
         <form action="/all_cards" method="post">
