Sun, Dec 3, 2023, 3:06 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -8,7 +8,7 @@
         <form action="/all_cards" method="post">
             <div class="card">
                 <h2>Weapon</h2>
-            <img src="rope.png" alt="rope" style="width:100%">
+            <img src="/static/rope.png" alt="rope" style="width:100%">
             <div class="container">
                 <h4>Rope</h4>
             </div>
