Sun, Dec 3, 2023, 3:33 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -6,15 +6,27 @@
     </head>
     <body>
         <form action="/all_cards" method="post">
-            <div class="card">
-                <ul>
-                    <h2>Weapon</h2>
-                    <img src="/static/rope.png" alt="rope" style="width:100%">
-                    <div class="container">
-                        <h4>Rope</h4>
-                    </div>
-                </ul>
-            </div>
+            <table>
+                <tr>
+                    <td>
+                        <div class="card">
+                            <h2>Weapon</h2>
+                            <img src="/static/lead_pipe.jpeg" alt="lead pipe" style="width:100%">
+                            <div class="container">
+                                <h4>Lead Pipe</h4>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="card">
+                            <h2>Weapon</h2>
+                            <img src="/static/rope.png" alt="rope" style="width:100%">
+                            <div class="container">
+                                <h4>Rope</h4>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
         </form>
     </body>
 </html>
