Sun, Dec 3, 2023, 3:39 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -8,23 +8,25 @@
         <form action="/all_cards" method="post">
             <table>
                 <tr>
-                    <td>
-                        <div class="card">
+                    <td class="card">
                             <h2>Weapon</h2>
                             <img src="/static/lead_pipe.jpeg" alt="lead pipe" style="width:100%">
-                            <div class="container">
-                                <h4>Lead Pipe</h4>
-                            </div>
-                        </div>
+                            <h4>Lead Pipe</h4>
                     </td>
-                    <td>
-                        <div class="card">
-                            <h2>Weapon</h2>
-                            <img src="/static/rope.png" alt="rope" style="width:100%">
-                            <div class="container">
-                                <h4>Rope</h4>
-                            </div>
-                        </div>
+                    <td class="card">
+                        <h2>Weapon</h2>
+                        <img src="/static/rope.png" alt="rope" style="width:100%">
+                        <h4>Rope</h4>
+                    </td>
+                    <td class="card">
+                        <h2>Weapon</h2>
+                        <img src="/static/trophy.png" alt="trophy" style="width:100%">
+                        <h4>Trophy</h4>
+                    </td>
+                    <td class="card">
+                        <h2>Weapon</h2>
+                        <img src="/static/knife.jpeg" alt="knife" style="width:100%">
+                        <h4>Knife</h4>
                     </td>
                 </tr>
         </form>
