--- a/static/styles.css
+++ b/static/styles.css
@@ -121,7 +121,7 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 img {
-border-radius: 5px 5px 0 0;
+    border: 5px solid black;
 }
 
 .container {
