Sun, Dec 3, 2023, 3:41 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -10,22 +10,22 @@
                 <tr>
                     <td class="card">
                             <h2>Weapon</h2>
-                            <img src="/static/lead_pipe.jpeg" alt="lead pipe" style="width:100%">
+                            <img src="/static/lead_pipe.jpeg" alt="lead pipe">
                             <h4>Lead Pipe</h4>
                     </td>
                     <td class="card">
                         <h2>Weapon</h2>
-                        <img src="/static/rope.png" alt="rope" style="width:100%">
+                        <img src="/static/rope.png" alt="rope">
                         <h4>Rope</h4>
                     </td>
                     <td class="card">
                         <h2>Weapon</h2>
-                        <img src="/static/trophy.png" alt="trophy" style="width:100%">
+                        <img src="/static/trophy.png" alt="trophy">
                         <h4>Trophy</h4>
                     </td>
                     <td class="card">
                         <h2>Weapon</h2>
-                        <img src="/static/knife.jpeg" alt="knife" style="width:100%">
+                        <img src="/static/knife.jpeg" alt="knife">
                         <h4>Knife</h4>
                     </td>
                 </tr>
