Sun, Dec 3, 2023, 3:50 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -28,6 +28,45 @@
                         <img src="/static/knife.jpeg" alt="knife">
                         <h4>Knife</h4>
                     </td>
+                    <td class="card">
+                        <h2>Weapon</h2>
+                        <img src="/static/candle.jpeg" alt="candlestick">
+                        <h4>Candlestick</h4>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="card">
+                        <h2>Place</h2>
+                        <img src="/static/gsas.jpeg" alt="gsas">
+                        <h4>GSAS</h4>
+                    </td>
+                    <td class="card">
+                        <h2>Place</h2>
+                        <img src="/static/mem_church.jpeg" alt="memorial church">
+                        <h4>Memorial Church</h4>
+                    </td>
+                    <td class="card">
+                        <h2>Place</h2>
+                        <img src="/static/widner.jpeg" alt="widner">
+                        <h4>Widner</h4>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="card">
+                        <h2>Person</h2>
+                        <img src="/static/download.jpeg" alt="john harvard">
+                        <h4>John Harvard</h4>
+                    </td>
+                    <td class="card">
+                        <h2>Person</h2>
+                        <img src="/static/pres_gay.jpeg" alt="president gay">
+                        <h4>President Gay</h4>
+                    </td>
+                    <td class="card">
+                        <h2>Person</h2>
+                        <img src="/static/remy.jpeg" alt="remy">
+                        <h4>Remy</h4>
+                    </td>
                 </tr>
         </form>
     </body>
