Sun, Dec 3, 2023, 8:25 PM -05:00

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -21,7 +21,7 @@
   <div class="cana"></div>
   <div class="cana"></div>
   <div class="cana"></div>
-  <div class="cana"><button><a href="mycards.html">CANADAY</a></button></div>
+  <div class="cana"><button name="Canaday">CANADAY</button></div>
   <div class="cana"></div>
   <div class="cana"></div>
   <div class="square"></div>
@@ -30,7 +30,7 @@
 
 
   <div class="mass"></div>
-  <div class="mass"><button><a href="mycards.html">MASSACHUSETTS HALL</a></button></div>
+  <div class="mass"><button name="Mass Hall">MASSACHUSETTS HALL</button></div>
   <div class="mass"></div>
   <div class="square"></div>
   <div class="square"></div>
@@ -86,13 +86,13 @@
   <div class="square"></div>
   <div class="square"></div>
   <div class="pool"></div>
-  <div class="pool"><button><a href="harvard.html">HARVARD HALL</a></button></div>
+  <div class="pool"><button name="Harvard Hall">HARVARD HALL</button></div>
   <div class="pool"></div>
   <div class="square"></div>
   <div class="square"></div>
   <div class="square"></div>
   <div class="mem"></div>
-  <div class="mem"><button><a href="mycards.html">MEMORIAL CHURCH</a></button></div>
+  <div class="mem"><button name="Mem Church">MEMORIAL CHURCH</button></div>
   <div class="mem"></div>
 
 
@@ -147,7 +147,7 @@
   <div class="square"></div>
 
   <div class="gsas"></div>
-  <div class="gsas"><button><a href="mycards.html">GSAS</a></button></div>
+  <div class="gsas"><button name="GSAS">GSAS</button></div>
   <div class="gsas"></div>
   <div class="gsas"></div>
   <div class="square"></div>
@@ -157,7 +157,7 @@
   <div class="square"></div>
   <div class="wide"></div>
   <div class="wide"></div>
-  <div class="wide"><button><a href="mycards.html">WIDENER</a></button></div>
+  <div class="wide"><button name="Widener">WIDENER</button></div>
   <div class="wide"></div>
   <div class="wide"></div>
   <div class="square"></div>
