Sun, Dec 3, 2023, 8:45 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -5,7 +5,7 @@
         <link href="/static/style.css" rel="stylesheet">
     </head>
     <body>
-        <form action="/all_cards" method="post">
+        <form action="/allcards" method="post">
             <table>
                 <tr>
                     <td class="card">
