--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -4,7 +4,7 @@
     <link href="/static/styles.css" rel="stylesheet">
 </head>
 <body>
-<form action="/game_board" method="post">
+<form action="/gameboard" method="post">
 <h1>
     <div class="header">
         CS50 CLUE
