--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -6,14 +6,14 @@
         <link href="/static/styles.css" rel="stylesheet">
     </head>
     <body class="body">
-        <form action="/my_cards" method="post">
+        <form action="/mycards" method="post">
             <div class="text">
                 Now that you know your own cards, click below to see all of the available options or go to the gameboard.
             </div>
             <h1 class="header1">The Card Options</h1>
-            <button><a href="/all_cards">All Cards</a></button>
+            <button><a href="/allcards">All Cards</a></button>
             <h1 class="header1">The Game Board</h1>
-            <button><a href="/game_board">Game Board</a></button>
+            <button><a href="/gameboard">Game Board</a></button>
         </form>
     </body>
 </html>
