Sun, Dec 3, 2023, 8:48 PM -05:00

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -5,186 +5,186 @@
 </head>
 <body>
 <form action="/gameboard" method="post">
-<h1>
-    <div class="header">
-        CS50 CLUE
-    </div>
-</h1>
+            <h1>
+                <div class="header">
+                    CS50 CLUE
+                </div>
+            </h1>
 
-<div class="gameboard">
-  <div class="mass"></div>
-  <div class="mass"></div>
-  <div class="mass"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="cana"></div>
-  <div class="cana"></div>
-  <div class="cana"></div>
-  <div class="cana"><button name="room" value="Canaday">CANADAY</button></div>
-  <div class="cana"></div>
-  <div class="cana"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-
-
-  <div class="mass"></div>
-  <div class="mass"><button name="room" value="Mass Hall">MASSACHUSETTS HALL</button></div>
-  <div class="mass"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="cana"></div>
-  <div class="cana"></div>
-  <div class="cana"></div>
-  <div class="cana"></div>
-  <div class="cana"></div>
-  <div class="cana"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
+            <div class="gameboard">
+            <div class="mass"></div>
+            <div class="mass"></div>
+            <div class="mass"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="cana"></div>
+            <div class="cana"></div>
+            <div class="cana"></div>
+            <div class="cana"><button name="room" value="Canaday">CANADAY</button></div>
+            <div class="cana"></div>
+            <div class="cana"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
 
 
-  <div class="mass"></div>
-  <div class="mass"></div>
-  <div class="mass"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
+            <div class="mass"></div>
+            <div class="mass"><button name="room" value="Mass Hall">MASSACHUSETTS HALL</button></div>
+            <div class="mass"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="cana"></div>
+            <div class="cana"></div>
+            <div class="cana"></div>
+            <div class="cana"></div>
+            <div class="cana"></div>
+            <div class="cana"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
 
 
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="pool"></div>
-  <div class="pool"></div>
-  <div class="pool"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="mem"></div>
-  <div class="mem"></div>
-  <div class="mem"></div>
-
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="pool"></div>
-  <div class="pool"><button name="room" value="Harvard Hall">HARVARD HALL</button></div>
-  <div class="pool"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="mem"></div>
-  <div class="mem"><button name="room" value="Mem Church">MEMORIAL CHURCH</button></div>
-  <div class="mem"></div>
+            <div class="mass"></div>
+            <div class="mass"></div>
+            <div class="mass"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
 
 
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="pool"></div>
-  <div class="pool"></div>
-  <div class="pool"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="mem"></div>
-  <div class="mem"></div>
-  <div class="mem"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="pool"></div>
+            <div class="pool"></div>
+            <div class="pool"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="mem"></div>
+            <div class="mem"></div>
+            <div class="mem"></div>
+
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="pool"></div>
+            <div class="pool"><button name="room" value="Harvard Hall">HARVARD HALL</button></div>
+            <div class="pool"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="mem"></div>
+            <div class="mem"><button name="room" value="Mem Church">MEMORIAL CHURCH</button></div>
+            <div class="mem"></div>
 
 
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="pool"></div>
+            <div class="pool"></div>
+            <div class="pool"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="mem"></div>
+            <div class="mem"></div>
+            <div class="mem"></div>
 
 
-  <div class="gsas"></div>
-  <div class="gsas"></div>
-  <div class="gsas"></div>
-  <div class="gsas"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="square"></div>
-
-  <div class="gsas"></div>
-  <div class="gsas"><button name="room" value="GSAS">GSAS</button></div>
-  <div class="gsas"></div>
-  <div class="gsas"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="wide"><button name="room" value="Widener">WIDENER</button></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
 
 
-  <div class="gsas"></div>
-  <div class="gsas"></div>
-  <div class="gsas"></div>
-  <div class="gsas"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="wide"></div>
-  <div class="square"></div>
-</div>
+            <div class="gsas"></div>
+            <div class="gsas"></div>
+            <div class="gsas"></div>
+            <div class="gsas"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="square"></div>
 
-<h3 class="header">BACK TO MY CARDS <br>
-    <button><a href="mycards.html">MY CARDS</a></button>
-</h3>
-</form>
-</body>
+            <div class="gsas"></div>
+            <div class="gsas"><button name="room" value="GSAS">GSAS</button></div>
+            <div class="gsas"></div>
+            <div class="gsas"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="wide"><button name="room" value="Widener" type="submit" >WIDENER</button></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="square"></div>
+
+
+            <div class="gsas"></div>
+            <div class="gsas"></div>
+            <div class="gsas"></div>
+            <div class="gsas"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="wide"></div>
+            <div class="square"></div>
+            </div>
+
+            <h3 class="header">BACK TO MY CARDS <br>
+                <button><a href="mycards.html">MY CARDS</a></button>
+            </h3>
+        </form>
+    </body>
 </html>
 
 
