--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link href="/static/styles.css" rel="stylesheet">
-</head>
-<body>
-<form action="/gameboard" method="post">
+    <head>
+        <link href="/static/styles.css" rel="stylesheet">
+    </head>
+    <body>
+        <button id="openModal">Open Modal</button>
+        <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span id="closeModal">&times;</span>
+            <p>Some text in the Modal..</p>
+        </div>
+        </div>
+        
+        <form action="/gameboard" method="post">
             <h1>
                 <div class="header">
                     CS50 CLUE
