Sun, Dec 3, 2023, 8:54 PM -05:00

--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <html lang="en" class="margin">
+    <!-- this should not be a separate html page; we should use a modal window instead.
+    Then we could open this up on any page and close it, like a pop up.-->
     <head>
         <title>My Cards</title>
         <link href="/static/styles.css" rel="stylesheet">
