Sun, Dec 3, 2023, 8:57 PM -05:00

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -21,7 +21,7 @@
             <div class="cana"></div>
             <div class="cana"></div>
             <div class="cana"></div>
-            <div class="cana"><button name="room" value="Canaday">CANADAY</button></div>
+            <div class="cana"><button name="room" value="Canaday" type="submit">CANADAY</button></div>
             <div class="cana"></div>
             <div class="cana"></div>
             <div class="square"></div>
@@ -30,7 +30,7 @@
 
 
             <div class="mass"></div>
-            <div class="mass"><button name="room" value="Mass Hall">MASSACHUSETTS HALL</button></div>
+            <div class="mass"><button name="room" value="Mass Hall" type="submit">MASSACHUSETTS HALL</button></div>
             <div class="mass"></div>
             <div class="square"></div>
             <div class="square"></div>
@@ -86,13 +86,13 @@
             <div class="square"></div>
             <div class="square"></div>
             <div class="pool"></div>
-            <div class="pool"><button name="room" value="Harvard Hall">HARVARD HALL</button></div>
+            <div class="pool"><button name="room" value="Harvard Hall" type="submit">HARVARD HALL</button></div>
             <div class="pool"></div>
             <div class="square"></div>
             <div class="square"></div>
             <div class="square"></div>
             <div class="mem"></div>
-            <div class="mem"><button name="room" value="Mem Church">MEMORIAL CHURCH</button></div>
+            <div class="mem"><button name="room" value="Mem Church" type="submit">MEMORIAL CHURCH</button></div>
             <div class="mem"></div>
 
 
@@ -147,7 +147,7 @@
             <div class="square"></div>
 
             <div class="gsas"></div>
-            <div class="gsas"><button name="room" value="GSAS">GSAS</button></div>
+            <div class="gsas"><button name="room" value="GSAS" type="submit">GSAS</button></div>
             <div class="gsas"></div>
             <div class="gsas"></div>
             <div class="square"></div>
