Sun, Dec 3, 2023, 9:00 PM -05:00

--- a/templates/guess.html
+++ b/templates/guess.html
@@ -7,7 +7,7 @@
     <body>
         <form action="/guess" method="post">
             <p>guess page</p>
-            <p>{{ get_flashed_messages()}}</p>
+            <p>{{ get_flashed_messages() | join(" ")}}</p>
         </form>
     </body>
 </html>
