Sun, Dec 3, 2023, 9:17 PM -05:00

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -181,7 +181,7 @@
             </div>
 
             <h3 class="header">BACK TO MY CARDS <br>
-                <button><a href="mycards.html">MY CARDS</a></button>
+                <button><a href="/mycards">MY CARDS</a></button>
             </h3>
         </form>
     </body>
