Sun, Dec 3, 2023, 9:25 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <form action="/allcards" method="post">
+            <div class="card">
+                <p>testing</p>
+            </div>
             <table>
                 <tr>
                     <td class="card">
