Sun, Dec 3, 2023, 9:27 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -7,7 +7,7 @@
     <body>
         <form action="/allcards" method="post">
             <div class="card">
-                <p>testing</p>
+                <p class="Widener">testing</p>
             </div>
             <table>
                 <tr>
