Sun, Dec 3, 2023, 9:28 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -2,13 +2,10 @@
 
 <html lang="en">
     <head>
-        <link href="/static/style.css" rel="stylesheet">
+        <link href="/static/styles.css" rel="stylesheet">
     </head>
     <body>
         <form action="/allcards" method="post">
-            <div class="card">
-                <p class="Widener">testing</p>
-            </div>
             <table>
                 <tr>
                     <td class="card">
