Sun, Dec 3, 2023, 9:37 PM -05:00

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -183,6 +183,10 @@
             <h3 class="header">BACK TO MY CARDS <br>
                 <button><a href="/mycards">MY CARDS</a></button>
             </h3>
+            <div>
+                <img src="/static/gsas.jpeg" alt="gsas" style="display:inliine position:relative">
+                <img src="/static/trophy.png" alt="trophy" style="postion: absolute bottom:0 ">
+            </div>
         </form>
     </body>
 </html>
