--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -184,8 +184,8 @@
                 <button><a href="/mycards">MY CARDS</a></button>
             </h3>
             <div>
-                <img src="/static/gsas.jpeg" alt="gsas" style="display:inliine position:relative">
-                <img src="/static/trophy.png" alt="trophy" style="postion: absolute bottom:0 ">
+                <img src="/static/gsas.jpeg" alt="gsas" style="display: inliine; position: relative">
+                <img src="/static/trophy.png" alt="trophy" style="postion: absolute; bottom: 0; right: 0">
             </div>
         </form>
     </body>
