Sun, Dec 3, 2023, 9:42 PM -05:00

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -183,8 +183,8 @@
             <h3 class="header">BACK TO MY CARDS <br>
                 <button><a href="/mycards">MY CARDS</a></button>
             </h3>
-            <div style="display: inline; position: absolute">
-                <img src="/static/gsas.jpeg" alt="gsas">
+            <div style="display: flex">
+                <img src="/static/gsas.jpeg" alt="gsas" style="display: inline; position: absolute">
                 <div style="postion: absolute; bottom: 0; right: 0">
                     <img src="/static/trophy.png" alt="trophy">
                 </div>
