--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -184,7 +184,7 @@
                 <button><a href="/mycards">MY CARDS</a></button>
             </h3>
             <div style="display: flex">
-                <img src="/static/gsas.jpeg" alt="gsas" style="display: inline; position: absolute">
+                <img src="/static/gsas.jpeg" alt="gsas">
                 <div style="postion: absolute; bottom: 0; right: 0">
                     <img src="/static/trophy.png" alt="trophy">
                 </div>
