--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -183,9 +183,9 @@
             <h3 class="header">BACK TO MY CARDS <br>
                 <button><a href="/mycards">MY CARDS</a></button>
             </h3>
-            <div style="display: flex">
+            <div style="position:relative">
                 <img src="/static/gsas.jpeg" alt="gsas">
-                <div style="postion: absolute; bottom: 0; right: 0">
+                <div style="position: absolute; bottom: 0; right: 0">
                     <img src="/static/trophy.png" alt="trophy">
                 </div>
             </div>
