Sun, Dec 3, 2023, 9:51 PM -05:00

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -185,9 +185,7 @@
             </h3>
             <div style="position:relative">
                 <img src="/static/gsas.jpeg" alt="gsas">
-                <div style="position: absolute; bottom: 0; right: 0">
-                    <img src="/static/trophy.png" alt="trophy">
-                </div>
+                <img src="/static/trophy.png" alt="trophy" style="position: absolute">
             </div>
         </form>
     </body>
