Sun, Dec 3, 2023, 9:53 PM -05:00

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -185,7 +185,7 @@
             </h3>
             <div style="position:relative">
                 <img src="/static/gsas.jpeg" alt="gsas">
-                <img src="/static/trophy.png" alt="trophy" style="position: absolute">
+                <img src="/static/trophy.png" alt="trophy" style="position: absolute; height: 75%">
             </div>
         </form>
     </body>
