Mon, Dec 4, 2023, 12:09 PM -05:00

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -184,8 +184,8 @@
                 <button><a href="/mycards">MY CARDS</a></button>
             </h3>
             <div style="position: relative">
-                <img src="/static/gsas.jpeg" alt="gsas">
-                <img src="/static/trophy.png" alt="trophy" style="position: absolute; height: 75%; top: 0; right: 0">
+                <img src="/static/gsas.jpeg" alt="gsas" style="top:0">
+                <img src="/static/trophy.png" alt="trophy" style="position: absolute; height: 75%; top: 30px">
             </div>
         </form>
     </body>
