--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -185,7 +185,7 @@
             </h3>
             <div style="position: relative">
                 <img src="/static/gsas.jpeg" alt="gsas" style="top:0">
-                <img src="/static/trophy.png" alt="trophy" style="position: absolute; height: 75%; top: 30px">
+                <img src="/static/trophy.png" alt="trophy" style="position: absolute; height: 75%; top: 15%">
             </div>
         </form>
     </body>
