Mon, Dec 4, 2023, 12:23 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -10,9 +10,12 @@
                     CS50 CLUE
                 </div>
             </h1>
-            <div style="display: flex; justify-content: center; align-items:center">
-                <img src="/static/gsas.jpeg" alt="gsas" style="width:700px">
-                <img src="/static/trophy.png" alt="trophy" style="position: absolute; top: 25%">
+            <div style="display: flex">
+                <img src="/static/gsas.jpeg" alt="gsas" style="width:700px; right: 100px">
+                <div style="position: absolute">
+                    <img src="/static/trophy.png" alt="trophy" style="right: 0">
+                    <img src="/static/mem_church.jpeg" alt="mem church" style="right: 80%">
+                </div>
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
                 <button><a href="/mycards">MY CARDS</a></button>
