--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -11,10 +11,10 @@
                 </div>
             </h1>
             <div style="display: flex">
-                <img src="/static/gsas.jpeg" alt="gsas" style="width:700px; right: 100px">
+                <img src="/static/gsas.jpeg" alt="gsas" style="width:700px; top: 0">
                 <div style="position: absolute">
-                    <img src="/static/trophy.png" alt="trophy" style="right: 0">
-                    <img src="/static/mem_church.jpeg" alt="mem church" style="right: 80%">
+                    <img src="/static/trophy.png" alt="trophy" style="top: 0; left: 0">
+                    <img src="/static/mem_church.jpeg" alt="mem church" style="top: 100px; left: 100px">
                 </div>
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
