--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -13,8 +13,8 @@
             <div style="display: flex">
                 <img src="/static/gsas.jpeg" alt="gsas" style="width:700px; top: 0">
                 <div style="position: absolute">
-                    <img src="/static/trophy.png" alt="trophy" style="top: 0; left: 0">
-                    <img src="/static/mem_church.jpeg" alt="mem church" style="top: 100px; left: 100px">
+                    <img src="/static/trophy.png" alt="trophy" style="z-index:1">
+                    <img src="/static/mem_church.jpeg" alt="mem church" style="z-index:10">
                 </div>
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
